Closed Bug 322273 Opened 19 years ago Closed 19 years ago

Crash at [@ nsMsgQuickSearchDBView::ListIdsInThread]

Categories

(Thunderbird :: General, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: mscott, Assigned: Bienvenu)

Details

(Keywords: fixed1.8.0.2, fixed1.8.1, topcrash)

Crash Data

Attachments

(1 file)

Keywords: topcrash
Target Milestone: --- → Thunderbird2.0
Incident ID: 13514136 Stack Signature nsMsgQuickSearchDBView::ListIdsInThread aa065dfd Product ID Thunderbird15 Build ID 2005120115 Trigger Time 2006-01-02 19:31:16.0 Platform Win32 Operating System Windows NT 5.1 build 2600 Module thunderbird.exe + (00466e43) URL visited User Comments went to deleted message, searched on the word 'bart' and that crashes the application Since Last Crash 96 sec Total Uptime 477805 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgQuickSearchDBView.cpp, line 350 Stack Trace nsMsgQuickSearchDBView::ListIdsInThread [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgQuickSearchDBView.cpp, line 350] nsMsgDBView::ExpandByIndex [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgDBView.cpp, line 4076] nsMsgThreadedDBView::AddKeys [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgThreadedDBView.cpp, line 265] nsMsgThreadedDBView::InitThreadedView [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgThreadedDBView.cpp, line 152] nsMsgQuickSearchDBView::Open [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgQuickSearchDBView.cpp, line 69] XPTC_InvokeByIndex [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp, line 102] XPCWrappedNative::CallMethod [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2139] XPC_WN_CallMethod [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 1444] js_Invoke [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1177] js_Interpret [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 3523] js_Execute [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/js/src/jsinterp.c, line 1424] JS_EvaluateUCScriptForPrincipals [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/js/src/jsapi.c, line 4103] nsJSContext::EvaluateString [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/dom/src/base/nsJSEnvironment.cpp, line 1061] nsGlobalWindow::RunTimeout [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/dom/src/base/nsGlobalWindow.cpp, line 6285] nsGlobalWindow::TimerCallback [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/dom/src/base/nsGlobalWindow.cpp, line 6656] nsAppStartup::Run [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/toolkit/components/startup/src/nsAppStartup.cpp, line 151] main [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mail/app/nsMailApp.cpp, line 62] kernel32.dll + 0x16d4f (0x7c816d4f)
Attached patch proposalSplinter Review
Attachment #207471 - Flags: review?
Attachment #207471 - Flags: review? → review?(bienvenu)
Comment on attachment 207471 [details] [diff] [review] proposal thx, timeless. I've checked in a variation on this, using NS_ENSURE_SUCCESS(rv, rv); I was not able to reproduce this problem, but I've checked that this particular call site shouldn't care if we return an error.
Attachment #207471 - Flags: review?(bienvenu) → review+
Comment on attachment 207471 [details] [diff] [review] proposal fix checked in. We'll have to see if it fixes instances of this crash. We'd consider it for 1.8.0.1 when we start taking fixes for tb 1.5.0.1
Attachment #207471 - Flags: approval1.8.1?
hey, scott, can I get approval for 1.8.1 for this?
Attachment #207471 - Flags: approval1.8.1?
Attachment #207471 - Flags: approval1.8.1+
Attachment #207471 - Flags: approval1.8.0.2?
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Attachment #207471 - Flags: approval1.8.0.2? → approval1.8.0.2+
Keywords: fixed1.8.0.2
Tough for QA to verify this one, but we should watch the talkback data once TB 1.5.0.2 ships.
Crash Signature: [@ nsMsgQuickSearchDBView::ListIdsInThread]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: