Bug #322273 --> Crash at [@ nsMsgQuickSearchDBView::ListIdsInThread]

patch by bievenu

a=mscott for 1.8.0.x